# LOWPOLY

./: .gitignore  CMakeLists.txt  TestLowPoly04_zh_CN.ts  image_controller.cpp  image_controller.h  image_model.cpp  image_model.h  image_widget.cpp  image_widget.h  logger.cpp  logger.h  main.cpp  resources.qrc  widget.cpp  widget.h  widget.ui
algorithm/: edge_drawing_color.h
core/: image_controller.cpp  image_controller.h  image_model.cpp  image_widget.cpp  image_widget.h
exlib/: Dll1.lib  Dll2.lib  edge_drawing_lib.h  helloCUDA.h  opencvEDLib.h
exlib/JFA_FF/: JumpFlooding_FeatureFlow.lib
exlib/edge_drawing/: edge_drawing_lib.h  edge_drawing_lib.lib
exlib/feature_flow/: JumpFlooding_FeatureFlow.cu  JumpFlooding_FeatureFlow.h
exlib/saliency/: SaliencyICCV13.lib  saliency_api.h
exlib/vertex_optimization/: VertexOptimization.cpp  VertexOptimization.h  VertexOptimization.lib
i18n/translation/: TestLowPoly04_zh_CN.qm  TestLowPoly04_zh_CN.ts
src/algorithm/: algorithm_params.h  constrained_triangulation.cpp  constrained_triangulation.h  douglas_peucker.cpp  douglas_peucker.h  edge_drawing.cpp  edge_drawing.h  edge_drawing_gray.cpp  edge_drawing_gray.h  feature_flow.cpp  feature_flow.h  jump_flooding.cpp  jump_flooding.h  saliency_detection.cpp  saliency_detection.h  vertex_optimization.cpp  vertex_optimization.h
src/core/: image_controller.cpp  image_controller.h  image_model.cpp  image_model.h  image_widget.cpp  image_widget.h  image_worker.cpp  image_worker.h
src/ui/: base_dialog.h  dialogs_factory.h  douglas_peucker_dialog.cpp  douglas_peucker_dialog.h  douglas_peucker_dialog.ui  ed_param_dialog.cpp  ed_param_dialog.h  ed_param_dialog.ui  edge_drawing_dialog.cpp  edge_drawing_dialog.h  edge_drawing_dialog.ui  saliency_detection_dialog.cpp  saliency_detection_dialog.h  saliency_detection_dialog.ui  triangle_color_dialog.cpp  triangle_color_dialog.h  triangle_color_dialog.ui  widget.cpp  widget.h  widget.ui
src/utils/: EDParams_util.cpp  EDParams_util.h  hello.cu  logger.cpp  logger.h  param_util.cpp  param_util.h  params_util.cpp  params_util.h  test.h
translation/: TestLowPoly04_zh_CN.ts
